@@ -2,6 +2,7 @@ v1.0.1 - Pending
 	+ Make lyrics fetching optional
 	+ Allow editing of stream name/url
 	+ Small usability improvements to gtk.StatusIcon
+	+ Improvements to reordering the current playlist with drag-n-drop
 	+ Bug: Info window freezes when editing currently playing song's tags
 
 v1.0 - January 21, 2006
